--- a/FullLocator/Views/ViewHome.xaml
+++ b/FullLocator/Views/ViewHome.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:FullLocator.ViewModels"
-             x:Class="FullLocator.Views.ViewHome">
+             x:Class="FullLocator.Views.ViewHome"
+             NavigationPage.HasNavigationBar="False">
 
     <ContentPage.BindingContext>
         <vm:HomeVM />
